tests/netconvert/import/XML/errors/xml_no_nod/options.netconvert
--edge-files=input_edges.edg.xml --output=net.net.xml
